--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          
         <div class="hero-img-container">
             <div  class="hero-img" id="tiltContainer">
-                <img class="tilt-image" src="./Assets/BigLogo2.png" alt="">  
+                <img class="tilt-image" src="./Assets/BigLogo.png" alt="">  
             </div>
             <a href="about.html#about-us"><button class="normal" >Learn More</button></a>
         </div>
